<resources>
    <string name="facebook_app_id"></string>
    <string name="screen_title_products">Products</string>
    <string name="screen_title_product_details">Product Details</string>
    <string name="screen_title_product_options">Choose Options</string>
    <string name="screen_title_shopping_cart">Shopping Cart</string>
    <string name="screen_title_select_photos">Select Photos</string>
    <string name="screen_title_past_orders">Past Orders</string>
    <string name="screen_title_order_status">Order Status</string>
    <string name="screen_title_order_details">Order Details</string>
    <string name="screen_title_quality_guarantee">Quality Guarantee</string>
    <string name="screen_title_how_it_works">How It Works</string>
    <string name="screen_title_about">About</string>
    <string name="screen_title_add_address">Checkout</string>
    <string name="screen_title_select_address">Select Address</string>
    <string name="screen_title_choose_country">Choose Country</string>
    <string name="screen_title_choose_currency">Choose Currency</string>
    <string name="screen_title_order_completed">Order Completed</string>
    <string name="screen_title_payment_method">Payment</string>
    <string name="screen_title_shipment_review">Shipment Review</string>
    <string name="screen_title_help">Help</string>
    <string name="button_label_create_it">Make it!</string>
    <string name="button_label_create_it_with_product"></string>
    <string name="button_add_more_products_text">Keep Shopping</string>
    <string name="button_label_coupon_add">Add</string>
    <string name="toast_coupon_already_added">Coupon is already added</string>
    <string name="toast_coupon_is_empty">Please enter coupon code</string>
    <string name="toast_error_while_croppin_image">Cropping image failed. Please try again.</string>
    <string name="dialog_message_confirm_coupons">Are you sure you want to use all coupons?</string>
    <string name="share_app_text">I\'m using PrintIO SDK! You can download it from https://github.com/printdotio/printio-android-sdk</string>
    <string name="upgrade_to">PrintIO has been upgraded to %1$s, we recommend you to update now?</string>
    <string name="upgrade_to_force_upgrade">PrintIO has been upgraded to %1$s, it is a critical update and you must update in order to continue!</string>
    <string name="choose_country">Choose Country</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in_to">Log In To %1$s</string>
    <string name="enter_username_and_password">Please enter your username and password</string>
    <string name="wrong_username_or_password">You have entered a wrong username or password</string>
    <string name="shipping_to">Will you be shipping to %1$s?</string>
    <string name="shipping_to_drop_down">SHIPPING TO: </string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="exit">Exit</string>
    <string name="starting_at_">Starting at %s</string>
    <string name="starting_at_retail_">Starting at %1$s %2$s</string>
    <string name="starting_at">Starting at</string>
    <string name="price_">Price %s</string>
    <string name="price_retail_">Price %1$s %2$s</string>
    <string name="price_each">%s Each</string>
    <string name="price_retail_each">%1$s %2$s Each</string>
    <string name="all">All</string>
    <string name="photobucket_server_error">Photobucket is temporarily unavailable. Please try later.</string>
    <string name="photobucket_error_loading_albums">Error loading Photobucket albums. Please try later.</string>
    <string name="successful_login_to_photo_source">Successfully logged in to %1$s</string>
    <string name="failed_to_login_to_photo_source">Failed to log in to %1$s</string>
    <string name="logout_photo_source">Do you want to log out of %1$s?</string>
    <string name="phone">Phone</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="flickr">Flickr</string>
    <string name="picasa">Google Photos</string>
    <string name="dropbox">Dropbox</string>
    <string name="photobucket">Photobucket</string>
    <string name="preselected">Preselected</string>
    <string name="customize_product_tooltip_text">Double-Tap photo to edit</string>
    <string name="customize_photobook_tooltip_text">Tap photo to edit or replace</string>
    <string name="photobooks_front_cover">Front Cover</string>
    <string name="photobooks_back_cover">Back Cover</string>
    <string name="photobooks_pages_numbers">Pages %1$s-%2$s</string>
    <string name="change_book_template">Change Book Template</string>
    <string name="change_template_changes_will_be_lost">By changing template, all changes will be lost. Do you want to proceed?</string>
    <string name="copy_template_unsuccessful">The templates are incompatible, so the images could not be copied</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="replace_photo">Replace Photo</string>
    <string name="add_text">Add Text</string>
    <string name="default_text_not_changed">Default text isn\'t changed. Do you want to continue without changing it?</string>
    <string name="product_preview">Product Preview</string>
    <string name="choose_print_type">Choose print type</string>
    <string name="step_x_of_y">Step %1$s of %2$s</string>
    <string name="default_shopping_cart_description">One Size</string>
    <string name="add_more_products">Add More Products</string>
    <string name="subtotal_">Subtotal:</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="coupon">Coupon</string>
    <string name="tax">Tax</string>
    <string name="calculated_at_checkout">Calculated at Checkout</string>
    <string name="promo_code">Promo Code</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="telephone_number">Phone Number</string>
    <string name="remove_item">Remove Item</string>
    <string name="done">Done</string>
    <string name="checkout">Checkout</string>
    <string name="billing_country">Billing Country</string>
    <string name="card_information">Card Information</string>
    <string name="card_number">Card Number</string>
    <string name="cvc">CVC or CVS</string>
    <string name="enter_fullname">Please enter full name</string>
    <string name="enter_cvc">Please enter CVC or CVS</string>
    <string name="exp_month_not_valid">Expiration month is not valid</string>
    <string name="billing_address">Billing Address</string>
    <string name="use_shipping_address">Use Shipping Address</string>
    <string name="clear_billing_address">Clear Billing Address</string>
    <string name="invalid_coupon">Coupon code is not valid!</string>
    <string name="enter_promo_code">Please enter promo code.</string>
    <string name="coupon_not_applied">Sorry, this coupon does not apply to the items in your cart.</string>
    <string name="coupon_applied">Coupon applied. You saved %1$s</string>
    <string name="coupon_savings_short">Savings:</string>
    <string name="coupon_savings_long">Coupon Savings:</string>
    <string name="place_order">Place Order</string>
    <string name="enter_payment_info">Enter Payment Info</string>
    <string name="tap_icons_to_get_images">Tap icons to get images</string>
    <string name="quantity">Quantity</string>
    <string name="edit">Edit</string>
    <string name="layout">Layout</string>
    <string name="side_number">Side %1$s</string>
    <string name="page_number">Page %1$s</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="first_name_empty">\'First Name\' should not be empty</string>
    <string name="last_name_empty">\'Last Name\' should not be empty</string>
    <string name="email_empty">\'Email\' should not be empty</string>
    <string name="state_empty">\'State\' should not be empty</string>
    <string name="zip_code_empty">\'Zip Code\' should not be empty</string>
    <string name="city_empty">\'City\' should not be empty</string>
    <string name="phone_number_empty">\'Phone Number\' should not be less then %1$s digits</string>
    <string name="phone_number_digits_only">\'Phone Number\' must contain digits only</string>
    <string name="street_empty">\'Street\' should not be empty</string>
    <string name="error_some_items_were_removed_from_shopping_cart">Some items were removed from your shopping cart.</string>
    <string name="error_getting_shopping_cart_items_prices">Error receiving shopping cart prices. Please try again later.</string>
    <string name="error_uploading_product">Error uploading product photos. Please try again.</string>
    <string name="error_ordering_product">Error while ordering.\nPlease go back to previous screen and ensure that you have entered all necessary data.</string>
    <string name="uploading_images">Uploading file %1$s of %2$s&#8230;\nPlease wait&#8230;</string>
    <string name="placing_order">Confirming Order Information&#8230;</string>
    <string name="cancelled_pay_pal">PayPal payment cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="verifying_payment">Verifying payment&#8230;</string>
    <string name="state_region_province">State/Region/Province</string>
    <string name="product">Product</string>
    <string name="help">Help</string>
    <string name="options">Options</string>
    <string name="featured_products">Featured Products</string>
    <string name="email_support">Email Support</string>
    <string name="change_currency">Change Currency</string>
    <string name="change_country">Change Country</string>
    <string name="pricing_chart">Pricing Chart</string>
    <string name="share_this_app">Share this app</string>
    <string name="accounts">Accounts</string>
    <string name="view_cart">View Cart</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="info">Info</string>
    <string name="version">Version: %1$s (%2$s)</string>
    <string name="step_title_generic"><![CDATA[<b>Step %1$s:</b> Choose %2$s]]></string>
    <string name="send">Send</string>
    <string name="coming_soon_product">This Product is Coming Very Soon.\n\nWe would love to tell you when it is live.\n\nLeave us your email.</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="image_arrangement">Image Arrangement</string>
    <string name="random_auto_arrange">Auto Random\nArrange</string>
    <string name="manual_drag_drop">Manual\nDrag and Drop</string>
    <string name="auto_arrange_note">Note: Both options allow you to finalize\nthe arrangement manually.</string>
    <string name="auto_populate_message">Before saving to cart, all pages need to be filled in. Do you want to auto or manually populate photos?</string>
    <string name="auto_populate">Auto populate</string>
    <string name="manual">Manual</string>
    <string name="upload_instructions_title">Upload Instructions</string>
    <string name="upload_instructions_text">1. Add images from the above sources\n\n2. Selected photos will be counted below\n\n3. When done, click the \"Next\" button below</string>
    <string name="check_order_status_hint">To check the status of your order, please enter your order ID below.</string>
    <string name="order_id">Order ID</string>
    <string name="view_order_status">View Order Status</string>
    <string name="date">Date</string>
    <string name="id">ID</string>
    <string name="cost">Cost</string>
    <string name="no_past_orders">No past orders.</string>
</resources>