<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <print.io.view.TextViewFontLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/icon_arrow_up"
        android:gravity="center"
        android:text="@string/tap_icons_to_get_images"
        android:textColor="#333333"
        android:textSize="@dimen/text_size_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/bg_instructions"
        android:orientation="vertical"
        android:paddingBottom="25dip"
        android:paddingTop="25dip" >

        <print.io.view.TextViewFontBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/icon_multiphoto"
            android:gravity="center"
            android:text="@string/upload_instructions_title"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_large" />

        <print.io.view.TextViewFontLight
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="20dip"
            android:gravity="left"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/upload_instructions_text"
            android:textColor="#333333"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

</LinearLayout>