<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/layout_titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_bar_background" >

        <LinearLayout
            android:id="@+id/layout_back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClickBack"
            android:orientation="horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <ImageView
                android:id="@+id/imageview_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_arrow_back" />
        </LinearLayout>

        <print.io.view.TextViewFontTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/screen_title_past_orders"
            android:textColor="@color/title_bar_text"
            android:textSize="@dimen/text_size_title" />

        <include layout="@layout/button_shopping_cart" />
    </RelativeLayout>

    <View
        android:id="@+id/view_dummy_title_separator"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/layout_titlebar"
        android:background="@color/title_bar_separator" />

    <ScrollView
        android:id="@+id/view_orders_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_dummy_title_separator"
        android:scrollbars="none"
        android:visibility="gone" >

        <TableLayout
            android:id="@+id/order_items_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dip" >

                <print.io.view.TextViewFontBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal" />

                <print.io.view.TextViewFontBold
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_weight="2"
                    android:text="@string/id"
                    android:textSize="@dimen/text_size_normal" />

                <print.io.view.TextViewFontBold
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cost"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/title_bar_separator" />
        </TableLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/view_no_past_orders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view_dummy_title_separator"
        android:visibility="gone" >

        <print.io.view.TextViewFontBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_past_orders"
            android:textSize="@dimen/text_size_normal" />
    </RelativeLayout>

</RelativeLayout>