<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/layout_titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_bar_background" >

        <LinearLayout
            android:id="@+id/layout_back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClickBack"
            android:orientation="horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <ImageView
                android:id="@+id/imageview_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_arrow_back" />
        </LinearLayout>

        <print.io.view.TextViewFontTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/screen_title_order_status"
            android:textColor="@color/title_bar_text"
            android:textSize="@dimen/text_size_title" />

        <include layout="@layout/button_shopping_cart" />
    </RelativeLayout>

    <View
        android:id="@+id/view_dummy_title_separator"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/layout_titlebar"
        android:background="@color/title_bar_separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_dummy_title_separator"
        android:orientation="vertical" >

        <print.io.view.TextViewFontBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:layout_marginTop="40dip"
            android:gravity="center"
            android:text="@string/check_order_status_hint"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/edittext_order_id"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="@color/bg_edit_text"
            android:hint="@string/order_id"
            android:inputType="textCapWords"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:textColor="#595d66"
            android:textColorHint="#b3b3b3"
            android:textSize="@dimen/text_size_normal" />

        <print.io.view.ButtonFontBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:background="@drawable/btn_primary"
            android:onClick="onClickViewOrderStatus"
            android:padding="10dp"
            android:text="@string/view_order_status"
            android:textColor="@color/button_primary_text"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

</RelativeLayout>