<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:padding="8dip" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <print.io.view.TextViewFontLight
                android:id="@+id/dialog_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dip"
                android:paddingTop="8dip"
                android:text="@string/auto_populate_message"
                android:textColor="#5a5d66"
                android:textSize="@dimen/text_size_normal" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <print.io.view.ButtonFontLight
                android:id="@+id/button_auto"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginRight="4dip"
                android:layout_weight="1"
                android:background="@drawable/btn_secondary"
                android:gravity="center"
                android:padding="8dip"
                android:text="@string/auto_populate"
                android:textColor="@color/button_secondary_text"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <print.io.view.ButtonFontLight
                android:id="@+id/button_manual"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dip"
                android:layout_weight="1"
                android:background="@drawable/btn_primary"
                android:gravity="center"
                android:padding="8dip"
                android:text="@string/manual"
                android:textColor="@color/button_primary_text"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>